--- a/profile-config/src/main/resources/application.properties
+++ b/profile-config/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=profile-config
+server.port=9999
+spring.cloud.discovery.enabled=true
+spring.cloud.config.server.git.uri=file:///C:/Users/yassine/Desktop/spring-cloud-docker/proxy-gateway-profile/config-profiles
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.instance.prefer-ip-address=true
+eureka.client.service-url.defaultZone=${DISCOVERY_SERVICE_URL:http://localhost:8761/eureka}
+management.endpoints.web.exposure.include=*
+
+
+
+
+
+
