--- a/service-customer/src/main/resources/application.properties
+++ b/service-customer/src/main/resources/application.properties
@@ -2,5 +2,8 @@ spring.application.name=service-customer
 server.port=8081
 spring.datasource.url=jdbc:h2:mem:customerdb
 spring.cloud.discovery.enabled=true
-spring.cloud.config.enabled=false
+spring.cloud.config.enabled=true
 eureka.instance.prefer-ip-address=true
+management.endpoints.web.exposure.include=*
+spring.config.import=optional:configserver:http://localhost:9999
+spring.cloud.config.uri=http://localhost:9999
